// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color should match conditional rendering 1`] = `
<section
  className="Color-block"
>
  <div
    className="color"
    style={
      Object {
        "background": undefined,
      }
    }
  />
  <p
    onClick={[Function]}
  >
    <i
      class="fas fa-lock"
    />
  </p>
  <p
    className="hex-code"
  />
</section>
`;

exports[`Color should match snapshot 1`] = `
<section
  className="Color-block"
>
  <div
    className="color"
    style={
      Object {
        "background": undefined,
      }
    }
  />
  <p
    onClick={[Function]}
  >
    <i
      class="fas fa-unlock"
    />
  </p>
  <p
    className="hex-code"
  />
</section>
`;
